--- a/index.html
+++ b/index.html
@@ -1,1 +1,261 @@
+<!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BOYNEXTDOOR Card Collector</title>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700;900&family=Noto+Sans+TC:wght@500;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-color: #F2E9E1; 
+            background-image: radial-gradient(#D1C4B9 1px, transparent 1px);
+            background-size: 24px 24px;
+            font-family: 'Merriweather', 'Noto Sans TC', serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            overflow: hidden;
+        }
+
+        .main-box {
+            background: #FDFDF7; 
+            padding: 25px 30px;
+            border: 3px solid #455A64;
+            border-radius: 28px;
+            box-shadow: 12px 12px 0px #BDC3C7; 
+            text-align: center;
+            width: 320px;
+        }
+
+        h2 { color: #546E7A; letter-spacing: 4px; font-size: 26px; margin: 0 0 10px; text-transform: uppercase; font-weight: 900; }
+
+        .stage { 
+            width: 260px; 
+            height: 440px; 
+            margin: 0 auto 5px; 
+            position: relative; 
+            perspective: 1500px; 
+        }
+
+        .card-name {
+            position: absolute;
+            top: 0px; 
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: #455A64; 
+            color: #FDFDF7;
+            font-size: 16px;
+            font-weight: 900;
+            padding: 4px 20px;
+            border: 2px solid #455A64;
+            border-radius: 10px;
+            z-index: 10; 
+            min-width: 80px;
+            box-shadow: 2px 2px 0px #BDC3C7;
+            opacity: 0;
+            transition: opacity 1.5s ease-in-out;
+        }
+
+        .photo-layer { 
+            position: absolute; 
+            top: 45px; 
+            width: 100%; 
+            height: 380px; 
+            border-radius: 18px; 
+            border: 4px solid #455A64; 
+            overflow: hidden; 
+            background-color: #eee; 
+            z-index: 1;
+        }
+        
+        .photo-container { width: 100%; height: 100%; overflow: hidden; }
+        .photo-container img { width: 100%; height: 100%; object-fit: cover; }
+
+        .door-layer {
+            position: absolute; 
+            top: 45px; 
+            width: 100%; 
+            height: 380px; 
+            z-index: 2; 
+            transform-origin: left; 
+            transition: transform 2.5s cubic-bezier(0.4, 0, 0.2, 1);
+            backface-visibility: hidden; 
+            border-radius: 18px; 
+            border: 4px solid #455A64;
+            background-color: #546E7A; 
+            display: flex; 
+            align-items: center; 
+            justify-content: center; 
+            padding: 12px; 
+            box-sizing: border-box;
+        }
+
+        .door-open { transform: rotateY(-115deg); }
+
+        .retro-door {
+            width: 100%; height: 100%; background-color: #FFAB91; border: 4px solid #455A64;
+            position: relative; display: flex; flex-direction: column; justify-content: space-evenly; align-items: center; padding: 10px 0;
+        }
+
+        .nameplate {
+            background-color: #455A64; color: white; padding: 4px 12px; border-radius: 4px; font-size: 11px;
+            font-weight: 900; letter-spacing: 1px; position: absolute; top: 46%; z-index: 10;
+        }
+
+        .knob { position: absolute; right: 8px; top: 50%; width: 14px; height: 14px; background-color: #455A64; border-radius: 50%; }
+
+        .panel-pair { display: flex; justify-content: space-around; width: 85%; height: 40%; }
+        .door-panel { width: 42%; height: 100%; background-color: #FFAB91; border: 2px solid rgba(0,0,0,0.15); border-radius: 3px; }
+
+        .info-text { 
+            font-family: 'Noto Sans TC', sans-serif; 
+            font-weight: bold; 
+            color: #546E7A; 
+            margin-top: 0px; 
+            margin-bottom: 10px;
+            font-size: 1.1em; 
+            min-height: 1.5em; 
+        }
+
+        .draw-btn {
+            font-family: 'Merriweather', serif; background-color: #FFAB91; color: white; border: 3px solid #455A64;
+            padding: 12px 40px; font-size: 18px; font-weight: 700; border-radius: 50px; cursor: pointer;
+            box-shadow: 0 5px 0 #D88A73; transition: all 0.1s;
+        }
+        .draw-btn:active { transform: translateY(4px); box-shadow: 0 1px 0 #D88A73; }
+        .draw-btn:disabled { background-color: #CFD8DC; border-color: #90A4AE; box-shadow: none; cursor: not-allowed; }
+    </style>
+</head>
+<body>
+
+<div class="main-box">
+    <h2>KNOCK KNOCK</h2>
+    <div class="stage">
+        <div class="card-name" id="cardNameDisplay"></div>
+        <div class="photo-layer">
+            <div class="photo-container" id="photoResult">
+                <div style="display:flex; align-items:center; justify-content:center; height:100%; color:#bbb; font-size: 40px;">🚪</div>
+            </div>
+        </div>
+        <div class="door-layer" id="doorLayer">
+            <div class="retro-door">
+                <div class="nameplate">BOYNEXTDOOR</div>
+                <div class="panel-pair"><div class="door-panel"></div><div class="door-panel"></div></div>
+                <div class="knob"></div>
+                <div class="panel-pair"><div class="door-panel"></div><div class="door-panel"></div></div>
+            </div>
+        </div>
+    </div>
+    <div class="info-text" id="memberName"></div>
+    <button class="draw-btn" id="drawBtn" onclick="startDraw()">Who’s there?</button>
+</div>
+
+<script>
+    const photoPools = {
+        sungho: ["https://pbs.twimg.com/media/GfnW_EWa8AERkr7?format=jpg&name=large","https://i.pinimg.com/736x/fb/73/0c/fb730cc8a5f466fc9deaba2870025b84.jpg","https://i.pinimg.com/736x/44/c3/f1/44c3f1688d2f5c26af74ab0a9dc1ddc7.jpg","https://pbs.twimg.com/media/GXHme9DbEAArz1S?format=jpg&name=large","https://pbs.twimg.com/media/FxYX3h2agAAbfvE?format=jpg&name=large","https://pbs.twimg.com/media/GDU56NsXsAAmsDO?format=jpg&name=large","https://pbs.twimg.com/media/F_H73nxbYAABKnX?format=jpg&name=large","https://pbs.twimg.com/media/GdIr1pUbkAA6oa5?format=jpg&name=large","https://pbs.twimg.com/media/G0KAnxNbMAAYvXq?format=jpg&name=large","https://pbs.twimg.com/media/GuWZJxGawAA9uRI?format=jpg&name=large","https://pbs.twimg.com/media/G9engQdaIAAphSS?format=jpg&name=medium","https://pbs.twimg.com/media/GVwJZNHbUAAnzV3?format=jpg&name=large","https://pbs.twimg.com/media/GjwDuC0XYAAGRn4?format=jpg&name=large","https://pbs.twimg.com/media/GbI-VIebsAAPmZE?format=jpg&name=large"],
+        riwoo: ["https://pbs.twimg.com/media/GREK_mhaIAAHnBv?format=jpg&name=large","https://pbs.twimg.com/media/G9KL7QuaUAAqz_3?format=jpg&name=large","https://pbs.twimg.com/media/Gbxz26FbEAAo682?format=jpg&name=large","https://pbs.twimg.com/media/Gc_8ShXaUAAqhL3?format=jpg&name=large","https://pbs.twimg.com/media/G9grWJhaIAAM35O?format=jpg&name=large","https://pbs.twimg.com/media/Gl7kgDkbYAI1rRd?format=jpg&name=large","https://pbs.twimg.com/media/GlxGFXWa8AASTpc?format=jpg&name=large","https://pbs.twimg.com/media/G9alTC4aYAQfOid?format=jpg&name=large","https://pbs.twimg.com/media/G7ZSDAtaUAAGs2r?format=jpg&name=large","https://pbs.twimg.com/media/GhASiaTbIAAOPEa?format=jpg&name=large","https://pbs.twimg.com/media/GVPny9Xa0AA_2FG?format=jpg&name=large","https://pbs.twimg.com/media/GSWvI_MWEAA20aa?format=jpg&name=large","https://pbs.twimg.com/media/GfUmBlobAAApgHg?format=jpg&name=large"],
+        jaehyun: ["https://pbs.twimg.com/media/G8DzjI8bsAEgf4d?format=jpg&name=medium","https://pbs.twimg.com/media/G9-_PTUbwAE7wNM?format=jpg&name=large","https://pbs.twimg.com/media/Ge12Scha8AADJhi?format=jpg&name=large","https://pbs.twimg.com/media/FxYp18xaMAQO31g?format=jpg&name=large","https://pbs.twimg.com/media/FxiKGiuWwAArDgc?format=jpg&name=large","https://pbs.twimg.com/media/FyBzji2WcAAB6Qv?format=jpg&name=large","https://pbs.twimg.com/media/GB4EA5nbYAA7WUs?format=jpg&name=large","https://pbs.twimg.com/media/F38gyP1aAAAeN2r?format=jpg&name=large","https://pbs.twimg.com/media/GcbkMlraoAAmXrs?format=jpg&name=large","https://pbs.twimg.com/media/GfJZGKQb0AA4G_i?format=jpg&name=large","https://pbs.twimg.com/media/GfvODZMaMAA3Ude?format=jpg&name=large","https://pbs.twimg.com/media/GxrY6EfawAExW6V?format=jpg&name=large","https://pbs.twimg.com/media/GJRhcS2aoAA3NOp?format=jpg&name=large","https://pbs.twimg.com/media/G175nmMbUAAF4AJ?format=jpg&name=large","https://pbs.twimg.com/media/GVG1iLnaEAQZR7L?format=jpg&name=large","https://pbs.twimg.com/media/GqHDM4AbcAAQxbu?format=jpg&name=large"],
+        taesan: ["https://pbs.twimg.com/media/G9gsXZyaUAADCyW?format=jpg&name=large","https://pbs.twimg.com/media/GcQr9DjaYAAi6ud?format=jpg&name=large","https://pbs.twimg.com/media/Ge4QYNnaUAA_AX_?format=jpg&name=large","https://pbs.twimg.com/media/FxvPVn3XsAMYlRe?format=jpg&name=large","https://pbs.twimg.com/media/FyL62-WWAAUPDjG?format=jpg&name=large","https://pbs.twimg.com/media/G1TkX7FbQAcIauY?format=jpg&name=large","https://pbs.twimg.com/media/Fw_DICJXgAIyJzL?format=jpg&name=large","https://pbs.twimg.com/media/FwzuFniX0AEnImi?format=jpg&name=large","https://pbs.twimg.com/media/F-V0hgxagAAF4zx?format=jpg&name=large","https://pbs.twimg.com/media/Gfko69kbEAEEaDx?format=jpg&name=large","https://pbs.twimg.com/media/G0KrUXbbUAQmyS1?format=jpg&name=large","https://pbs.twimg.com/media/Gro8IKSXMAAfbOW?format=jpg&name=large","https://pbs.twimg.com/media/GqWYMPabEAAaOCM?format=jpg&name=large","https://pbs.twimg.com/media/GQW7-4ragAA1s9P?format=jpg&name=large","https://pbs.twimg.com/media/GbyPHKLbgAA2RIg?format=jpg&name=medium","https://pbs.twimg.com/media/GYzouxqbQAE5q99?format=jpg&name=large","https://pbs.twimg.com/media/GNYmYTSakAAsJVD?format=jpg&name=large"],
+        leehan: ["https://pbs.twimg.com/media/FxjDBr6XwAASMCz?format=jpg&name=large","https://pbs.twimg.com/media/FxydR8-XwAARTHK?format=jpg&name=large","https://pbs.twimg.com/media/F2xzm37a4AAmUUK?format=jpg&name=large","https://pbs.twimg.com/media/Ge_iNxcbwAI1uFV?format=jpg&name=large","https://pbs.twimg.com/media/FwpeOeyWAAEqYLO?format=jpg&name=small","https://pbs.twimg.com/media/Ghau8RoaUAEykyE?format=jpg&name=large","https://pbs.twimg.com/media/Ghau8RiaAAA70Z6?format=jpg&name=large","https://pbs.twimg.com/media/FwdQnU0XsAQAS-Q?format=jpg&name=large","https://pbs.twimg.com/media/GhAjS-lbwAAax7C?format=jpg&name=medium","https://pbs.twimg.com/media/GMvgF0iaUAA5fjL?format=jpg&name=large","https://pbs.twimg.com/media/GxkFltZWoAAkKiR?format=jpg&name=large","https://pbs.twimg.com/media/GRuWbxtawAAMfin?format=jpg&name=large","https://pbs.twimg.com/media/GPo0Ap8bgAEbRVK?format=jpg&name=large","https://pbs.twimg.com/media/GOwnh-XbcAAHXmi?format=jpg&name=large","https://pbs.twimg.com/media/GJXGw6MbEAADTGz?format=jpg&name=large","https://pbs.twimg.com/media/GHLtLfObIAEIBhV?format=jpg&name=large"],
+        woonhak: ["https://pbs.twimg.com/media/Gdy449pb0AAq2U6?format=jpg&name=large","https://pbs.twimg.com/media/GuDlknPXkAAMe-T?format=jpg&name=large","https://pbs.twimg.com/media/FxOZkkUWYAMDa8x?format=jpg&name=large","https://pbs.twimg.com/media/FxoUzPSWIAAYTg1?format=jpg&name=large","https://pbs.twimg.com/media/G9qVKTQakAEAazX?format=jpg&name=large","https://pbs.twimg.com/media/Gs2Hd5Cb0AAr9qm?format=jpg&name=large","https://pbs.twimg.com/media/Gft8HDdaQAA7S4a?format=jpg&name=large","https://pbs.twimg.com/media/Gdj6hc1XoAAxC3s?format=jpg&name=large","https://pbs.twimg.com/media/Geww-4LbMAAwUYm?format=jpg&name=large","https://pbs.twimg.com/media/FwqVqRwaEAAT4ux?format=jpg&name=large","https://pbs.twimg.com/media/G4L_zChXUAAAha4?format=jpg&name=large","https://pbs.twimg.com/media/Gj_Iw7EWkAApnOB?format=jpg&name=large","https://pbs.twimg.com/media/GWyknMSWUAAwqGG?format=jpg&name=large"],
+        sangsung: ["https://i.pinimg.com/736x/0d/aa/5c/0daa5ceed06edff1f5e7ab846a61031c.jpg","https://pbs.twimg.com/media/GfK5XDIa0AAYGLk?format=jpg&name=medium"],
+        mungnyang: ["https://pbs.twimg.com/media/G0AkznubwAA2hbQ?format=jpg&name=large", "https://pbs.twimg.com/media/G0AkzoJaYAAWV06?format=jpg&name=large", "https://pbs.twimg.com/media/G9LbxAubgAA8Yin?format=jpg&name=large"],
+        gumchi: ["https://file3.instiz.net/data/cached_img/upload/2024/05/10/23/a7d6fcf520f0ea1bc24fe826dc009f3f.jpg", "https://pbs.twimg.com/media/GQFUWIwbEAIABoj?format=jpg&name=medium"],
+        hois: ["https://pbs.twimg.com/media/GrkdKtnXwAA5iAe?format=jpg&name=large", "https://pbs.twimg.com/media/GsNRduhbcAAEqA9?format=jpg&name=4096x4096"],
+        nunnyang: ["https://pbs.twimg.com/media/G5cjKKBbcAQOBZY?format=jpg&name=large", "https://pbs.twimg.com/media/GsNRlMdaYAAfgOn?format=jpg&name=4096x4096"],
+        hyukmyeong: ["https://pbs.twimg.com/media/Gpv-V30aYAMqWeL?format=jpg&name=large","https://pbs.twimg.com/media/Gpv-V2naIAAIzk7?format=jpg&name=large","https://pbs.twimg.com/media/Gpv-V35aYAMksee?format=jpg&name=large","https://pbs.twimg.com/media/Gpv-V4sbMAABihx?format=jpg&name=large"],
+        sanriuo: ["https://pbs.twimg.com/media/GjqopSDaQAAhiOI?format=jpg&name=large","https://pbs.twimg.com/media/GR-Os1aaoAAmk21?format=jpg&name=large"],
+        irion: ["https://img-cdn.theqoo.net/JJYstu.jpg","https://pbs.twimg.com/media/G-cDxOmbYAE51N0?format=jpg&name=large","https://pbs.twimg.com/media/GfUM60-bEAAkEsS?format=jpg&name=large"],
+        dubuz: ["https://pbs.twimg.com/media/G8YBQjMbUAA6q-C?format=jpg&name=large","https://pbs.twimg.com/media/G8YBQjMaoAAVpds?format=jpg&name=large","https://pbs.twimg.com/media/G6G-d9eaYAAjOPy?format=jpg&name=large","https://pbs.twimg.com/media/G5mN5E5aUAA8xH0?format=jpg&name=large"],
+        ddingdong: ["https://pbs.twimg.com/media/F9SaFRSaIAAHU6U?format=jpg&name=900x900","https://pbs.twimg.com/media/F6EDyTRXwAAv342?format=jpg&name=large"],
+        mulmung: ["https://pbs.twimg.com/media/G9Q5g8nbYAAMwXq?format=jpg&name=large","https://pbs.twimg.com/media/GsHCPUnaUAYqeh3?format=jpg&name=4096x4096","https://pbs.twimg.com/media/GRuWbxjbYAA4cy4?format=jpg&name=large"],
+        unmung: ["https://pbs.twimg.com/media/F5pdl3pawAAhCN2?format=jpg&name=4096x4096","https://i.pinimg.com/1200x/f9/5d/03/f95d031fd6eb54f6e9fc8fd37c6a1773.jpg","https://pbs.twimg.com/media/G6a3wnza0AA_OFi?format=jpg&name=large","https://pbs.twimg.com/media/GOWjTX6bYAA6CV1?format=jpg&name=large"],
+        gongpo: ["https://pbs.twimg.com/media/F9MkyllbwAAH_3R?format=jpg&name=large","https://pbs.twimg.com/media/GO8ppkWaYAAuGLK?format=jpg&name=4096x4096","https://pbs.twimg.com/media/GNtMGh3akAARk9G?format=jpg&name=large","https://pbs.twimg.com/media/GLID-U_bgAAja2E?format=jpg&name=medium","https://pbs.twimg.com/media/GLg7FlUaQAAKG_s?format=jpg&name=large"],
+        sanhak: ["https://pbs.twimg.com/media/GNBjl8CaMAAv26Z?format=jpg&name=4096x4096", "https://pbs.twimg.com/media/F8uhQIIWcAAZTsJ?format=jpg&name=large", "https://pbs.twimg.com/media/F8uhQIJXEAAfI2M?format=jpg&name=large"],
+        aha: ["https://pbs.twimg.com/media/G9LZXdGbgAU7OJc?format=jpg&name=large","https://pbs.twimg.com/media/G9LZXc-aAAAPTwt?format=jpg&name=large","https://pbs.twimg.com/media/G3o7zfWWQAAklbD?format=jpg&name=4096x4096","https://pbs.twimg.com/media/G3o7zfZWsAETZzR?format=jpg&name=4096x4096","https://pbs.twimg.com/media/G9LXNrJbYAAy6_e?format=jpg&name=large"],
+        luckydoor: ["https://pbs.twimg.com/media/GaLaxrTbYAA4kga?format=jpg&name=medium"]
+    };
+
+    const memberNames = {
+        sungho: "성호", riwoo: "리우", jaehyun: "명재현", // 卡片上方標籤已更新
+        taesan: "태산", leehan: "이한", woonhak: "운학",
+        sangsung: "상성즈", mungnyang: "멍냥즈", gumchi: "껌치즈",
+        hois: "호이즈", nunnyang: "눈냥즈", hyukmyeong: "혁명즈",
+        sanriuo: "산리우즈", irion: "이리온즈", dubuz: "두부즈",
+        ddingdong: "띵동즈", mulmung: "물멍즈", unmung: "운멍즈",
+        gongpo: "공포즈", sanhak: "산學會", aha: "아하즈", luckydoor: "LUCKYDOOR"
+    };
+
+    const members = [
+        { id: 'sungho', name: "성호이 왔어요🩵", images: photoPools.sungho, weight: 1 },
+        { id: 'riwoo', name: "상혁이 왔어요🩵", images: photoPools.riwoo, weight: 1 },
+        { id: 'jaehyun', name: "재현이 왔어요🩵", images: photoPools.jaehyun, weight: 1 }, // 下方文字恢復為原樣
+        { id: 'taesan', name: "동민이 왔어요🩵", images: photoPools.taesan, weight: 1 },
+        { id: 'leehan', name: "동현이 왔어요🩵", images: photoPools.leehan, weight: 1 },
+        { id: 'woonhak', name: "운학이 왔어요🩵", images: photoPools.woonhak, weight: 1 },
+        { id: 'sangsung', name: "상성즈 왔어요🩵", images: photoPools.sangsung, weight: 1 },
+        { id: 'mungnyang', name: "멍냥즈 왔어요🩵", images: photoPools.mungnyang, weight: 1 },
+        { id: 'gumchi', name: "껌치즈 왔어요🩵", images: photoPools.gumchi, weight: 1 },
+        { id: 'hois', name: "호이즈 왔어요🩵", images: photoPools.hois, weight: 1 },
+        { id: 'nunnyang', name: "눈냥즈 왔어요🩵", images: photoPools.nunnyang, weight: 1 },
+        { id: 'hyukmyeong', name: "혁명즈 왔어요🩵", images: photoPools.hyukmyeong, weight: 1 },
+        { id: 'sanriuo', name: "산리우즈 왔어요🩵", images: photoPools.sanriuo, weight: 1 },
+        { id: 'irion', name: "이리온즈 왔어요🩵", images: photoPools.irion, weight: 1 },
+        { id: 'dubuz', name: "두부즈 왔어요🩵", images: photoPools.dubuz, weight: 1 },
+        { id: 'ddingdong', name: "띵동즈 왔어요🩵", images: photoPools.ddingdong, weight: 1 },
+        { id: 'mulmung', name: "물멍즈 왔어요🩵", images: photoPools.mulmung, weight: 1 },
+        { id: 'unmung', name: "운멍즈 왔어요🩵", images: photoPools.unmung, weight: 1 },
+        { id: 'gongpo', name: "공포즈 왔어요🩵", images: photoPools.gongpo, weight: 1 },
+        { id: 'sanhak', name: "산학회 왔어요🩵", images: photoPools.sanhak, weight: 1 },
+        { id: 'aha', name: "아하즈 왔어요🩵", images: photoPools.aha, weight: 1 },
+        { id: 'luckydoor', name: "축하해요🩵", images: photoPools.luckydoor, weight: 0.2 }
+    ];
+
+    function startDraw() {
+        const door = document.getElementById('doorLayer');
+        const photo = document.getElementById('photoResult');
+        const drawBtn = document.getElementById('drawBtn');
+        const nameDisplay = document.getElementById('memberName');
+        const cardNameDisplay = document.getElementById('cardNameDisplay');
+
+        drawBtn.disabled = true;
+
+        const totalWeight = members.reduce((sum, member) => sum + member.weight, 0);
+        let randomNum = Math.random() * totalWeight;
+        let selectedMember = members[0];
+        for (const member of members) {
+            if (randomNum < member.weight) {
+                selectedMember = member;
+                break;
+            }
+            randomNum -= member.weight;
+        }
+        const img = selectedMember.images[Math.floor(Math.random() * selectedMember.images.length)];
+
+        cardNameDisplay.style.opacity = "0"; 
+        door.style.transition = "transform 0.4s ease-in";
+        door.classList.remove('door-open');
+        nameDisplay.innerText = ""; 
+
+        setTimeout(() => {
+            photo.innerHTML = `<img src="${img}">`;
+            door.style.transition = "transform 2.5s cubic-bezier(0.4, 0, 0.2, 1)";
+            door.classList.add('door-open');
+            
+            setTimeout(() => {
+                cardNameDisplay.innerText = memberNames[selectedMember.id];
+                cardNameDisplay.style.opacity = "1";
+            }, 1200);
+
+            setTimeout(() => {
+                nameDisplay.innerText = selectedMember.name;
+                drawBtn.disabled = false;
+            }, 1800);
+        }, 500); 
+    }
+</script>
+</body>
+</html>
 
