--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             min-width: 80px;
             box-shadow: 2px 2px 0px #BDC3C7;
             opacity: 0;
-            transition: opacity 1.5s ease-in-out;
+            transition: opacity 0.8s ease-in-out; /* 加快淡入速度 */
         }
 
         .photo-layer { 
@@ -80,7 +80,7 @@
             height: 380px; 
             z-index: 2; 
             transform-origin: left; 
-            transition: transform 2.5s cubic-bezier(0.4, 0, 0.2, 1);
+            transition: transform 1.8s cubic-bezier(0.4, 0, 0.2, 1); /* 門開啟速度稍微加快 */
             backface-visibility: hidden; 
             border-radius: 18px; 
             border: 4px solid #455A64;
@@ -179,19 +179,19 @@
     };
 
     const memberNames = {
-        sungho: "성호", riwoo: "리우", jaehyun: "명재현", // 卡片上方標籤已更新
+        sungho: "성호", riwoo: "리우", jaehyun: "명재현", 
         taesan: "태산", leehan: "이한", woonhak: "운학",
         sangsung: "상성즈", mungnyang: "멍냥즈", gumchi: "껌치즈",
         hois: "호이즈", nunnyang: "눈냥즈", hyukmyeong: "혁명즈",
         sanriuo: "산리우즈", irion: "이리온즈", dubuz: "두부즈",
         ddingdong: "띵동즈", mulmung: "물멍즈", unmung: "운멍즈",
-        gongpo: "공포즈", sanhak: "산學會", aha: "아하즈", luckydoor: "LUCKYDOOR"
+        gongpo: "공포즈", sanhak: "산학회", aha: "아하즈", luckydoor: "LUCKYDOOR"
     };
 
     const members = [
         { id: 'sungho', name: "성호이 왔어요🩵", images: photoPools.sungho, weight: 1 },
         { id: 'riwoo', name: "상혁이 왔어요🩵", images: photoPools.riwoo, weight: 1 },
-        { id: 'jaehyun', name: "재현이 왔어요🩵", images: photoPools.jaehyun, weight: 1 }, // 下方文字恢復為原樣
+        { id: 'jaehyun', name: "재현이 왔어요🩵", images: photoPools.jaehyun, weight: 1 },
         { id: 'taesan', name: "동민이 왔어요🩵", images: photoPools.taesan, weight: 1 },
         { id: 'leehan', name: "동현이 왔어요🩵", images: photoPools.leehan, weight: 1 },
         { id: 'woonhak', name: "운학이 왔어요🩵", images: photoPools.woonhak, weight: 1 },
@@ -241,21 +241,22 @@
 
         setTimeout(() => {
             photo.innerHTML = `<img src="${img}">`;
-            door.style.transition = "transform 2.5s cubic-bezier(0.4, 0, 0.2, 1)";
+            door.style.transition = "transform 1.8s cubic-bezier(0.4, 0, 0.2, 1)";
             door.classList.add('door-open');
             
+            // 加快時間：上方標籤 0.6 秒出現
             setTimeout(() => {
                 cardNameDisplay.innerText = memberNames[selectedMember.id];
                 cardNameDisplay.style.opacity = "1";
-            }, 1200);
+            }, 600);
 
+            // 加快時間：下方文字 1.0 秒出現
             setTimeout(() => {
                 nameDisplay.innerText = selectedMember.name;
                 drawBtn.disabled = false;
-            }, 1800);
+            }, 1000);
         }, 500); 
     }
 </script>
 </body>
 </html>
-
