--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             min-width: 80px;
             box-shadow: 2px 2px 0px #BDC3C7;
             opacity: 0;
-            transition: opacity 0.8s ease-in-out;
+            transition: opacity 0.5s ease-in-out; /* 標籤淡入更快 */
         }
 
         .photo-layer { 
@@ -80,7 +80,7 @@
             height: 380px; 
             z-index: 2; 
             transform-origin: left; 
-            transition: transform 1.8s cubic-bezier(0.4, 0, 0.2, 1);
+            transition: transform 1.2s cubic-bezier(0.25, 0.46, 0.45, 0.94); /* 開門動畫縮短至 1.2s */
             backface-visibility: hidden; 
             border-radius: 18px; 
             border: 4px solid #455A64;
@@ -185,7 +185,7 @@
         hois: "호이즈", nunnyang: "눈냥즈", hyukmyeong: "혁명즈",
         sanriuo: "산리우즈", irion: "이리온즈", dubuz: "두부즈",
         ddingdong: "띵동즈", mulmung: "물멍즈", unmung: "운멍즈",
-        gongpo: "공포즈", sanhak: "산학회", aha: "아하즈", luckydoor: "LUCKYDOOR"
+        gongpo: "공포즈", sanhak: "산學會", aha: "아하즈", luckydoor: "LUCKYDOOR"
     };
 
     const members = [
@@ -235,25 +235,27 @@
         const img = selectedMember.images[Math.floor(Math.random() * selectedMember.images.length)];
 
         cardNameDisplay.style.opacity = "0"; 
-        door.style.transition = "transform 0.4s ease-in";
+        door.style.transition = "transform 0.3s ease-in"; // 關門重置也加快
         door.classList.remove('door-open');
         nameDisplay.innerText = ""; 
 
         setTimeout(() => {
             photo.innerHTML = `<img src="${img}">`;
-            door.style.transition = "transform 1.8s cubic-bezier(0.4, 0, 0.2, 1)";
+            door.style.transition = "transform 1.2s cubic-bezier(0.25, 0.46, 0.45, 0.94)";
             door.classList.add('door-open');
             
+            // 上方韓文標籤 0.4 秒出現
             setTimeout(() => {
                 cardNameDisplay.innerText = memberNames[selectedMember.id];
                 cardNameDisplay.style.opacity = "1";
-            }, 600);
+            }, 400);
 
+            // 下方文字 0.7 秒出現
             setTimeout(() => {
                 nameDisplay.innerText = selectedMember.name;
                 drawBtn.disabled = false;
-            }, 1000);
-        }, 500); 
+            }, 700);
+        }, 400); // 準備抽卡的時間也稍微縮短
     }
 </script>
 </body>
